# opencv_rtsp_streaming_poc

./: .gitignore  CMakeLists.txt  README.md  openPipe.txt  streamPipe.txt
doxygen/: Doxyfile
include/: rtsp-stream.cpp  rtsp-stream.h
src/: main.cpp
